Heavy changes:
refactoring for a better understanding of the code
GSM codec Support
Refix qualify
Fix incoming call (had no audio)
DTFGenerator when pressing keyboard

Problems still present:
- 1. a second incoming call hangup the present call
- 2. When you call the iax peer you have no ring feedback on the phone you are calling from
- 3. ring.wav added but is not included on the jar so it fails (this is for the phone actually rings)